--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,12 @@
   height:auto;
   display:inline-block;
 }
+
+/*Btn for logout*/
+.btn-logout {
+  position:absolute;
+  top:0;
+  right:0;
+  margin-right: 20px;
+  margin-top: 10px
+}
