--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,30 @@
   margin-right: 20px;
   margin-top: 10px
 }
+
+
+.navbar {
+    background-color: rgb(36, 36, 36)
+}
+
+/* The hero image */
+body {
+  width: 100%;
+  height:100%;
+  background: url('Images/voldemort.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  background-attachment: fixed;
+  display:block;
+}
+
+.logo-image{
+    position: absolute;
+    width: auto;
+    height: auto;
+    overflow: hidden; 
+    margin-top: -6px;
+    margin-left: -15px
+}
+
